--- a/SocketServer/package.json
+++ b/SocketServer/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "mongoose": "^5.10.9",
     "socket.io": "^4.0.0"
   }
